@@ -11,6 +11,7 @@ t/00-init.t
 t/floating-refs.t
 t/inc/setup.pl
 t/overrides.t
+t/zz-GtkActionGroup.t
 t/zz-GtkBuilder.t
 t/zz-GtkCellLayoutIface.t
 t/zz-GtkCellRendererIface.t
