@@ -1,5 +1,5 @@
 name    = Gtk3
-version = 0.006
+version = 0.007
 author  = Torsten Schoenfeld <kaffeetisch@gmx.de>
 license = LGPL_2_1
 copyright_holder = Torsten Schoenfeld
